--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvacord": "^5.2.1",
     "date-and-time": "^1.0.1",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "fs": "0.0.1-security",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
